Bug 309314 - Parser does not escape XML-unsafe characters
Summary: Parser does not escape XML-unsafe characters
Status: RESOLVED FIXED
Alias: None
Product: libkgapi
Classification: Frameworks and Libraries
Component: contacts (other bugs)
Version First Reported In: 0.4.2
Platform: Ubuntu Other
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-31 13:42 UTC by karaluh
Modified: 2012-10-31 15:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.4.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description karaluh 2012-10-31 13:42:45 UTC
As in summary, the full error is:
akonadi_googlecontacts_resource_1: Bad request.

Reproducible: Always
Comment 1 karaluh 2012-10-31 14:27:45 UTC
(In reply to comment #0)
> As in summary, the full error is:
> akonadi_googlecontacts_resource_1: Bad request.
> 
> Reproducible: Always

This contact has ! & and / characters in "Notes" field, I don't know which one triggers the bug.
Comment 2 Daniel Vrátil 2012-10-31 14:59:29 UTC
*** Bug 309318 has been marked as a duplicate of this bug. ***
Comment 3 Daniel Vrátil 2012-10-31 15:01:35 UTC
Tested, looks like &, < and > in any field cause the request to fail.
Comment 4 Daniel Vrátil 2012-10-31 15:41:32 UTC
Git commit 3d834e6fba8cd68b0226b1eb8c98d42656f96a71 by Dan Vrátil.
Committed on 31/10/2012 at 16:37.
Pushed by dvratil into branch 'LibKGAPI/0.4'.

Escape HTML-unsafe characters in Contacts XML serializer
FIXED-IN: 0.4.4

M  +32   -29   libkgapi/services/contacts.cpp

http://commits.kde.org/akonadi-google/3d834e6fba8cd68b0226b1eb8c98d42656f96a71