Escape HTML-unsafe characters in Contacts XML serializer

BUG: 309314
FIXED-IN: 0.4.4